# container-manager-mcp

./: .bumpversion.cfg  .dockerignore  .env.example  .pre-commit-config.yaml  .vulture_ignore  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  a2a.json  compose.yml  connector_manifest.yml  debug.Dockerfile  entrypoint.sh  index.html  mcp.compose.yml  mcp_config.json  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  test_list.py  test_results.txt
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
concepts/: index.html
container_manager_mcp/: __init__.py  __main__.py  agent.py  agent_server.py  container_manager.py  container_manager_a2a.py  container_manager_agent.py  container_manager_mcp.py  doctor.py  graph_config.py  k8s_manager.py  kg_ingest.py  mcp.py  mcp_config.json  mcp_server.py  mcp_server.py.debug  models.py  multi_context_manager.py  orch_health.py  specialist_tools.py  tools.py  utils.py
container_manager_mcp/agent/: CRON_LOG.md  IDENTITY.md
container_manager_mcp/agent_data/: HEARTBEAT.md  IDENTITY.md  MCP_AGENTS.md  NODE_AGENTS.md  knowledge_graph.db  knowledge_graph.db.wal  mcp_config.json  templates.py
container_manager_mcp/connectors/: mcp_source_presets.json  tool_schema_fingerprints.json
container_manager_mcp/k8s/: __init__.py  base.py  cluster_nodes.py  compose.py  config.py  governance.py  interop.py  kubeconfig_import.py  manager.py  networking.py  observability.py  rbac.py  storage.py  unsupported.py  workloads.py
container_manager_mcp/mcp/: __init__.py  mcp_compose.py  mcp_container.py  mcp_docker_advanced.py  mcp_docker_swarm.py  mcp_doctor.py  mcp_image.py  mcp_info.py  mcp_k8s_advanced.py  mcp_k8s_advanced_comprehensive.py  mcp_k8s_advanced_networking.py  mcp_k8s_advanced_rbac.py  mcp_k8s_advanced_resources.py  mcp_k8s_advanced_scheduling.py  mcp_k8s_advanced_state.py  mcp_k8s_advanced_storage.py  mcp_k8s_cluster.py  mcp_k8s_config.py  mcp_k8s_crd.py  mcp_k8s_governance.py  mcp_k8s_monitoring.py  mcp_k8s_networking.py  mcp_k8s_observability.py  mcp_k8s_rbac.py  mcp_k8s_remaining_gaps.py  mcp_k8s_resources.py  mcp_k8s_storage.py  mcp_k8s_system.py  mcp_k8s_workloads.py  mcp_misc.py  mcp_multi_context.py  mcp_network.py  mcp_podman.py  mcp_podman_advanced.py  mcp_swarm.py  mcp_system.py  mcp_volume.py
container_manager_mcp/ontology/: __init__.py  certification.json  container.ttl
container_manager_mcp/ontology/fixtures/: records.json
container_manager_mcp/ontology/mappings/: source.yaml
container_manager_mcp/ontology/migrations/: manifest.json
container_manager_mcp/ontology/shapes/: connector.shacl.ttl
container_manager_mcp/prompts/: container_specialist.json  main_agent.json
container_manager_mcp/skills/container-manager-compose-management/: SKILL.md
container_manager_mcp/skills/container-manager-config-walkthrough/: SKILL.md  WORKFLOW.md
container_manager_mcp/skills/container-manager-container-management/: SKILL.md
container_manager_mcp/skills/container-manager-container-manager-info/: SKILL.md
container_manager_mcp/skills/container-manager-image-management/: SKILL.md
container_manager_mcp/skills/container-manager-kg-ingestion/: SKILL.md  WORKFLOW.md
container_manager_mcp/skills/container-manager-kubernetes-operations/: SKILL.md  WORKFLOW.md
container_manager_mcp/skills/container-manager-lifecycle/: SKILL.md  WORKFLOW.md
container_manager_mcp/skills/container-manager-log-management/: SKILL.md
container_manager_mcp/skills/container-manager-mcp-compose/: SKILL.md
container_manager_mcp/skills/container-manager-mcp-container/: SKILL.md
container_manager_mcp/skills/container-manager-mcp-image/: SKILL.md
container_manager_mcp/skills/container-manager-mcp-info/: SKILL.md
container_manager_mcp/skills/container-manager-mcp-log/: SKILL.md
container_manager_mcp/skills/container-manager-mcp-network/: SKILL.md
container_manager_mcp/skills/container-manager-mcp-operations/: SKILL.md
container_manager_mcp/skills/container-manager-mcp-swarm/: SKILL.md
container_manager_mcp/skills/container-manager-mcp-system/: SKILL.md
container_manager_mcp/skills/container-manager-mcp-volume/: SKILL.md
container_manager_mcp/skills/container-manager-multi-context/: SKILL.md  WORKFLOW.md
container_manager_mcp/skills/container-manager-network-management/: SKILL.md
container_manager_mcp/skills/container-manager-podman-operations/: SKILL.md  WORKFLOW.md
container_manager_mcp/skills/container-manager-starter/: SKILL.md
container_manager_mcp/skills/container-manager-swarm/: SKILL.md  WORKFLOW.md
container_manager_mcp/skills/container-manager-swarm-management/: SKILL.md
container_manager_mcp/skills/container-manager-system-management/: SKILL.md
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  configuration.md  deployment.md  index.md  installation.md  kubernetes.md  legacy_readme.md  multi_host.md  overview.md  setup.md  usage.md
installation/: index.html
legacy_readme/: index.html
multi_host/: index.html
overview/: index.html
scripts/: validate_a2a_agent.py  validate_agent.py  validate_agent_local.py
search/: search_index.json
setup/: index.html
tests/: conftest.py  test_action_discovery.py  test_agent_server.py  test_capability_parity.py  test_cluster_dump_security.py  test_concept_parity.py  test_container_manager.py  test_container_manager_mcp_brute_force_coverage.py  test_docker_swarm_ops.py  test_doctor.py  test_identity_context_scoping.py  test_init.py  test_integration.py  test_inventory_hosts.py  test_k8s_manager_surface.py  test_k8s_ops.py  test_kg_ingest.py  test_kubeconfig_import.py  test_mcp_server.py  test_multi_context_manager.py  test_optional_sdk_exception_fallback.py  test_orch_health.py  test_pod_copy_ops.py  test_podman_ops.py  test_swarm_ops.py
usage/: index.html
(+9 files in other folders)
