[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "container-manager-mcp"
version = "1.4.0"
description = "Container Manager - manage Docker, Docker Swarm, and Podman containers. MCP+A2A Servers Out of the Box!"
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: Public Domain", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.10"
dependencies = [ "agent-utilities[mcp]>=0.2.31", "docker>=7.1.0",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
podman = [ "podman>=5.6.0",]
docker = [ "docker>=7.1.0",]
mcp = [ "agent-utilities[mcp]>=0.2.31",]
agent = [ "agent-utilities[agent,logfire]>=0.2.31", "container-manager-mcp[mcp]>=1.4.0",]
all = [ "container-manager-mcp[docker,podman,mcp,agent]>=1.4.0",]
test = [ "pytest", "pytest-asyncio",]

[project.scripts]
container-manager-mcp = "container_manager_mcp.mcp_server:mcp_server"
container-manager-agent = "container_manager_mcp.agent_server:agent_server"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[tool.setuptools.package-data]
container_manager_mcp = [ "mcp_config.json", "agent_data/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]
