[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "container-manager-mcp"
version = "2.0.0"
description = "Container Manager - manage Docker, Docker Swarm, and Podman containers. MCP+A2A Servers Out of the Box!"
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: Public Domain", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11, <3.15"
dependencies = [ "agent-utilities[mcp]>=1.0.0", "docker[ssh]>=7.1.0", "tunnel-manager>=2.0.0",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
podman = [ "podman>=5.6.0",]
docker = [ "docker[ssh]>=7.1.0",]
kubernetes = [ "kubernetes>=29.0.0",]
mcp = [ "agent-utilities[mcp]>=1.0.0",]
agent = [ "agent-utilities[agent,logfire]>=1.0.0", "container-manager-mcp[mcp]>=2.0.0",]
all = [ "container-manager-mcp[docker,podman,kubernetes,mcp,agent]>=2.0.0",]
test = [
    "pytest-xdist>=3.6.0", "pytest", "pytest-asyncio", "pytest-cov",]

[project.scripts]
container-manager-mcp = "container_manager_mcp.mcp_server:mcp_server"
container-manager-agent = "container_manager_mcp.agent_server:agent_server"

[project.entry-points."agent_utilities.skill_providers"]
container-manager-mcp = "container_manager_mcp.skills"

[project.entry-points."agent_utilities.prompt_providers"]
container-manager-mcp = "container_manager_mcp.prompts"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[tool.setuptools.package-data]
container_manager_mcp = [ "mcp_config.json", "agent_data/**", "prompts/**", "skills/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]

[tool.vulture]
ignore_names = ["request", "config"]
exclude = [".venv", "venv", "tests/"]

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
